# dreamprice

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  spec.md
.claude/: settings.json
.claude/commands/: commit-push.md
.claude/hooks/: idle-check.sh  task-gate.sh
.claude/plugins/dreamprice/: plugin.json
.github/workflows/: ci.yml
app/: README.md  app.py  requirements.txt
app/configs/: cso.json  cso_store_elasticities.json
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
configs/: main.yaml
configs/agent/: dreamer.yaml
configs/environment/: grocery.yaml
configs/experiment/: main.yaml
configs/experiment/ablations/: flat_encoder.yaml  gru_backbone.yaml  horizon_10.yaml  horizon_25.yaml  horizon_5.yaml  imagination_off.yaml  no_mopo_lcb.yaml  no_stochastic_latent.yaml  no_symlog_twohot.yaml
configs/world_model/: mamba.yaml
docs/: Proposal Review and Implementation Plan.txt  agent-team-instructions.md  critical-review.md  implementation-guide.md  project-blueprint.md  research-1.md  research-2.md  research-final.md
docs/plans/: 2026-02-23-agent-team-design.md
docs/progress/: track-6.md
docs/results/: world_model_quality.json
docs/results/ablations/: flat_encoder.json  gru_backbone.json  horizon_10.json  horizon_25.json  horizon_5.json  imagination_off.json  no_mopo_lcb.json  no_stochastic_latent.json  no_symlog_twohot.json
docs/results/baselines/: competitive_matching.json  cost_plus.json  dqn.json  dreamprice.json  ppo.json  sac.json  static_xgboost.json
docs/reviews/: critical-review-1.md  critical-review-2.txt  inconsisten2.txt  inconsistencies in the paper.md
notebooks/: causal_analysis.ipynb  custom_env.ipynb  quickstart.ipynb  world_model_training.ipynb
paper/: Makefile  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  references.bib
paper/sections/: appendices.tex  conclusion.tex  introduction.tex  literature_review.tex  methodology.tex  results.tex
scripts/: analyze_results.py  download_data.sh  estimate_elasticity.py  evaluate.py  evaluate_world_model.py  extract_ablation_results.py  generate_figures.py  push_to_hub.py  run_ablations.py  run_ablations_single_seed.sh  serve.py  train.py
scripts/baselines/: competitive_matching.py  cost_plus.py  dqn_baseline.py  ppo_baseline.py  run_rl_baselines.py  sac_baseline.py  sb3_wrapper.py  static_xgboost.py
src/retail_world_model/: __init__.py
src/retail_world_model/api/: __init__.py  batching.py  (+2 more)
tests/: conftest.py
tests/test_ablations/: test_ablations.py
tests/test_api/: test_batching.py  test_serve.py
tests/test_data/: test_dataset.py  test_dominicks_loader.py  test_schemas.py  test_transforms.py
tests/test_envs/: test_grocery.py
tests/test_models/: test_decoder.py  test_distributions.py  test_posterior.py  test_rssm.py
tests/test_scripts/: test_estimate_elasticity.py
tests/test_training/: test_integration.py  test_losses.py
(+40 files in other folders)
