[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retail-world-model"
version = "0.1.0"
description = "DreamPrice: A learned world model for retail pricing environments"
readme = "README.md"
license = "CC-BY-NC-4.0"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "doubleml>=0.7",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "gymnasium>=0.29",
    "hydra-core>=1.3",
    "wandb>=0.15",
    "safetensors>=0.4",
    "huggingface_hub>=0.20",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "sse-starlette>=1.6",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.1",
    "mamba-ssm>=2.0",
    "causal-conv1d>=1.2",
    "triton>=2.1",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "pyright>=1.1",
    "complexipy>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retail_world_model"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C901"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
