[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retail-world-model"
version = "0.1.0"
description = "DreamPrice: learned world model for retail pricing — Mamba-2 RSSM on Dominick's scanner data"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "world-model", "retail", "pricing", "mamba", "ssm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "doubleml>=0.7",
    "scikit-learn>=1.3",
    "pydantic>=2.0",
    "gymnasium>=0.29",
    "hydra-core>=1.3",
    "wandb>=0.15",
    "safetensors>=0.4",
    "huggingface_hub>=0.20",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "sse-starlette>=1.6",
]

[project.urls]
Homepage = "https://github.com/SharathSPhD/dreamprice"
Repository = "https://github.com/SharathSPhD/dreamprice"

[project.optional-dependencies]
cuda = ["torch>=2.1", "mamba-ssm>=2.2", "triton>=2.1", "causal-conv1d>=1.4"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.1", "pyright>=1.1", "complexipy"]
docs = ["jupyter", "nbformat", "matplotlib", "seaborn"]

[project.scripts]
dreamprice-train = "retail_world_model.training.trainer:main"
dreamprice-serve = "scripts.serve:main"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_world_model"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C901"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
